[package]
name = "metaplex-meta-decoder"
version = "0.1.0"
description = "Metaplex Program Library Token"
license = "Apache-2.0"
edition = "2021"


[dependencies]
num-derive = "~0.3"
shank = { version = "~0.0.2" }
thiserror = "1.0"
num-traits="*"
borsh = "0.9.2"
solana-program = {path="../../solana/sdk/program"}


[lib]
crate-type = ["cdylib", "lib"]

[workspace]
